# concerts-rust

./: .env  Cargo.toml  README.md
migrations/2020-06-02-124942_users/: down.sql  up.sql
migrations/2020-06-03-003850_artists/: down.sql  up.sql
migrations/2020-06-03-003908_concert_types/: down.sql  up.sql
migrations/2020-06-03-003916_venues/: down.sql  up.sql
migrations/2020-06-03-004902_concerts/: down.sql  up.sql
src/: errors.rs  handlers.rs  main.rs  models.rs  schema.rs
src/handlers/: artists.rs  concert_types.rs  concerts.rs  index.rs  users.rs  venues.rs
src/models/: artists.rs  concert_types.rs  concerts.rs  users.rs  venues.rs
