[package]
name = "v1"
version = "0.1.0"
authors = ["mdoellerer <mdoellerer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "*"
diesel = { version = "1.4.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.5"
r2d2 = "0.8.8"
rand = "0.7.3"
rust-crypto = "0.2.36"
serde = { version = "1.0.111", features = ["derive"] }
serde_json ="1.0.55"